--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,26 @@
 			<artifactId>webgraph</artifactId>
 			<version>3.6.3</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/it.unimi.dsi/law-library -->
+		<dependency>
+			<groupId>it.unimi.dsi</groupId>
+			<artifactId>law-library</artifactId>
+			<version>2.6.0</version>
+			<exclusions>
+				<exclusion>  <!-- declare the exclusion here -->
+					<groupId>org.eclipse.jetty.aggregate</groupId>
+					<artifactId>jetty-all</artifactId>
+				</exclusion>
+				<exclusion>
+					  <groupId>it.unimi.di</groupId>
+					  <artifactId>mg4j</artifactId>
+				</exclusion>
+				<exclusion>
+					  <groupId>it.unimi.di</groupId>
+					  <artifactId>mg4j-big</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
