--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>webgraph</artifactId>
-			<version>3.6.3</version>
+			<version>3.6.2</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/it.unimi.dsi/law-library -->
 		<dependency>
@@ -44,6 +44,14 @@
 			<artifactId>slf4j-simple</artifactId>
 			<version>1.6.1</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.lucene/lucene-core -->
+		<dependency>
+			<groupId>org.apache.lucene</groupId>
+			<artifactId>lucene-core</artifactId>
+			<version>4.8.0</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
