--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,14 @@
           <release>11</release>
         </configuration>
       </plugin>
+      <plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>mave-surefire-plugin</artifactId>
+        	<version>2.19</version>
+        	<configuration>
+        		<argLine>-Xmx8G</argLine>
+        	</configuration>
+        </plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
